flask-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /athlete
            pathType: Prefix
            backend:
              service:
                name: flask-app-service
                port:
                  number: 5000
